2014-07-02  James Hunt  <james.hunt@ubuntu.com>

	* init/tests/data/upstart-1.13.json: Updated with new content containing
	  both more cgroup stanza jobs and a job with a job process whose
	  child setup is "in-flight", representing the JobProcessData in the
	  JSON as 'process_data'.
	* init/tests/test_state.c: test_cgroup_and_process_data_state():
	  - Renamed from test_cgroup_state().
	  - Made cgroup guards more fine-grainded to ensure this test always
	    runs, but only tests cgroup content if built with cgroup support.
	  - Pre-process the JSON to pass a valid fd to allow the deserialisation
	    of the JobProcessData to succeed.

2014-06-04  James Hunt  <james.hunt@ubuntu.com>

	* dbus/com.ubuntu.Upstart.xml: Renamed SetEnvMulti to SetEnvList and
	  UnsetEnvMulti to UnsetEnvList for clarity.
	* init/control.c:
	  - control_set_env_list(): Renamed from control_set_env_multi().
	  - control_unset_env_list(): Renamed from control_unset_env_multi().
	  - control_unset_env(): Actually make it call control_unset_env_list().
	* util/initctl.c: Updated to call renamed functions.

2014-06-02  James Hunt  <james.hunt@ubuntu.com>

	* dbus/com.ubuntu.Upstart.xml: Added 'SetEnvMulti' and 'UnsetEnvMulti'
	  methods to allow multiple job environment variables to be
	  set/unset simultaneously (LP: #1324096).
	* init/control.c:
	  - control_set_env_multi(): Implementation for 'SetEnvMulti'.
	  - control_set_env(): Retained 'SetEnv' implementation that now calls
	    control_set_env_multi().
	  - control_unset_env_multi(): Implementation for 'UnSetEnvMulti'.
	* util/initctl.c:
	  - set_env_action(): Updated to call set_env_multi_sync().
	  - unset_env_action(): Updated to call unset_env_multi_sync().
	* util/man/initctl.8: Updated to document ability for 'set-env' and
	  'unset-env' to set and unset multiple variables simultaneously.
	* util/tests/test_initctl.c: Added new tests:
	  - "multiple set-env in 'name=value' form"
	  - "multiple set-env in 'name=' form"